--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           <input id="name" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="time">How Many Years Have You Been Coding?</label>
-          <input id="time" class="form-control" type="text">
+          <label for="years">How Many Years Have You Been Coding?</label>
+          <input id="years" class="form-control" type="text">
         </div>
         <div class="form-group">
           <label for="endings">Front-End or Back-End?</label>
-          <select class="form-control" id="gender">
+          <select class="form-control" id="endingr">
             <option value="front">Front-end</option>
             <option value="back">Back-end</option>
           </select>
@@ -31,19 +31,19 @@
           <div class="radio">
             <h5>What do you want to build?</h5>
             <label>
-              <input type="radio" name="build" value="apps" checked>
+              <input type="radio" name="building" value="apps" checked>
               Apps
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="build" value="data-mines">
+              <input type="radio" name="building" value="data-mines">
               Data-mines
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="build" value="cybersecurity">
+              <input type="radio" name="building" value="cybersecurity">
               cybersecurity
             </label>
           </div>
@@ -73,32 +73,32 @@
       </form>
       <div class="languages">
         <div id="python">
-          <h2> Your language is </h2>
+          <h2> Your language is Python!</h2>
         </div>
         <div id="javascript">
-          <h2>Your language is </h2>
+          <h2>Your language is javascript</h2>
         </div>
-        <div id="python">
-          <h2>Your language is </h2>
+        <div id="react">
+          <h2>Your language is React!</h2>
         </div>
-        <div id="javascript">
+        <!-- <div id="javascript">
           <h2>YYour language is   </h2>
         </div>
-        <div id="C*">
+        <div id="React">
           <h2>Your language is  </h2>
         </div>
-        <div id="C*">
+        <div id="react">
           <h2>Your language is   </h2>
         </div>
-        <div id="C*">
+        <div id="react">
           <h2>Your language is   </h2>
         </div>
-        <div id="python">
+        <div id="react">
           <h2>Your language is  </h2>
         </div>
-        <div id="javascript">
+        <div id="react">
           <h2>YYour language is </h2>
-        </div>
+        </div> -->
         <div id="english">
           <h2>Your language is </h2>
         </div>
