adds branching for 0 years experience

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <input id="years" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="endings">Front-End or Back-End?</label>
-          <select class="form-control" id="endingr">
+          <label for="ending">Front-End or Back-End?</label>
+          <select class="form-control" id="ending">
             <option value="front">Front-end</option>
             <option value="back">Back-end</option>
           </select>
