add branches for 0 years experience

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <form id="got-form">
         <div class="form-group">
-          <label for="name">Name</label>
+          <label for="name">What is your name?</label>
           <input id="name" class="form-control" type="text">
         </div>
         <div class="form-group">
@@ -73,13 +73,13 @@
       </form>
       <div class="languages">
         <div id="python">
-          <h2> Your language is Python!</h2>
+          <h2> <output id="name"></output>, We suggest you learn Python!</h2>
         </div>
         <div id="javascript">
-          <h2>Your language is javascript</h2>
+          <h2> <output id="name"></output>, We suggest you learn Javascript</h2>
         </div>
         <div id="react">
-          <h2>Your language is React!</h2>
+          <h2> <output id="name"></output>, Your language is React!</h2>
         </div>
         <!-- <div id="javascript">
           <h2>YYour language is   </h2>
