add front and backend branches to apps, datamines, and startup big gov options for zero years experience

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
       </form>
       <div class="languages">
         <div id="python">
-          <h2> <output id="name"></output>, We suggest you learn Python!</h2>
+          <h2> We suggest you learn Python! </h2>
         </div>
         <div id="javascript">
-          <h2> <output id="name"></output>, We suggest you learn Javascript</h2>
+          <h2> We suggest you learn Javascript! </h2>
         </div>
         <div id="react">
-          <h2> <output id="name"></output>, Your language is React!</h2>
+          <h2> We suggest you learn React! </h2>
         </div>
         <!-- <div id="javascript">
           <h2>YYour language is   </h2>
