adds functioning branch for 1 to 3 years of experience

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Programming Language Quiz</title>
   </head>
   <body>
+      <h1>What Type of Programming Language Should You Learn?</h1>
     <div class="container">
       <form id="got-form">
         <div class="form-group">
@@ -29,7 +30,7 @@
         </div>
         <div class="form-group">
           <div class="radio">
-            <h5>What do you want to build?</h5>
+            <h2>What do you want to build?</h2>
             <label>
               <input type="radio" name="building" value="apps" checked>
               Apps
@@ -37,7 +38,7 @@
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="building" value="data-mines">
+              <input type="radio" name="building" value="data">
               Data-mines
             </label>
           </div>
@@ -64,7 +65,7 @@
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="companies" value="start-up">
+              <input type="radio" name="companies" value="startup">
               Start-up
             </label>
           </div>
@@ -73,13 +74,13 @@
       </form>
       <div class="languages">
         <div id="python">
-          <h2> We suggest you learn Python! </h2>
+          <h3> We suggest you learn Python! </h3>
         </div>
         <div id="javascript">
-          <h2> We suggest you learn Javascript! </h2>
+          <h3> We suggest you learn Javascript! </h3>
         </div>
         <div id="react">
-          <h2> We suggest you learn React! </h2>
+          <h3> We suggest you learn React! </h3>
         </div>
         <!-- <div id="javascript">
           <h2>YYour language is   </h2>
