this adds a name

--- a/index.html
+++ b/index.html
@@ -72,15 +72,16 @@
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
+
       <div class="languages">
         <div id="python">
-          <h3> We suggest you learn Python! </h3>
+          <h3> Dear <span class="name1"></span> We suggest you learn Python! </h3>
         </div>
         <div id="javascript">
-          <h3> We suggest you learn Javascript! </h3>
+          <h3> Dear <span class="name1"></span> We suggest you learn Javascript! </h3>
         </div>
         <div id="react">
-          <h3> We suggest you learn React! </h3>
+          <h3> Dear <span class="name1"></span> We suggest you learn React! </h3>
         </div>
         <!-- <div id="javascript">
           <h2>YYour language is   </h2>
