this adds features

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <div class="languages">
         <div id="python">
-          <h3> Dear <span class="name"></span> We suggest you learn Python! </h3>
+          <h3> Dear <span id="name"></span> We suggest you learn Python! </h3>
         </div>
         <div id="javascript">
           <h3> Dear <span class="name"></span> We suggest you learn Javascript! </h3>
