--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 
       <div class="languages">
         <div id="python">
-          <h3> Dear <span id="name"></span> We suggest you learn Python! </h3>
+          <h3> We suggest you learn Python, ! </h3>
         </div>
         <div id="javascript">
-          <h3> Dear <span class="name"></span> We suggest you learn Javascript! </h3>
+          <h3>  We suggest you learn Javascript! </h3>
         </div>
         <div id="react">
-          <h3> Dear <span class="name"></span> We suggest you learn React! </h3>
+          <h3> We suggest you learn React! </h3>
         </div>
         <!-- <div id="javascript">
           <h2>YYour language is   </h2>
