changes questions and README

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <input id="years" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="ending">Front-End or Back-End?</label>
+          <label for="ending">Do you want to work on the Front-End or Back-End?</label>
           <select class="form-control" id="ending">
             <option value="front">Front-end</option>
             <option value="back">Back-end</option>
