--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Programming Language Quiz</title>
   </head>
   <body>
-      <h1>What Type of Programming Language Should You Learn?</h1>
-    <div class="container">
+      <h2>What Type of Programming Language Should You Learn?</h1>
+    <div class="container" class=:warning>
       <form id="got-form">
         <div class="form-group">
           <label for="name">What is your name?</label>
@@ -51,7 +51,7 @@
         </div>
         <div class="form-group">
           <div class="radio">
-            <h5>What size company do you want to work for?</h5>
+            <h2>What size company do you want to work for?</h5>
             <label>
               <input type="radio" name="companies" value="big" checked>
               Big
